<resources>
    <string name="app_name">DoggyMate</string>
    <string name="default_notification_channel_id">doggy_notification_id</string>
    <string name="LEGACY_SERVER_KEY">AIzaSyBH1ZqksiT4hxR-3n9zNvc2-BpA9raN_DQ</string>
    <string name="authorizedEntity">831958409819</string>
    <string name="scope">FCM</string>
    <string name="app_title">Locate a DoggyMate</string>
    <string name="Chat_now">Chat now</string>
    <string name="desc">Image</string>
    <string name="desc1">Image</string>
    <string name="desc2">Image</string>
    <string name="desc3">Image</string>
    <string name="desc4">Image</string>
    <string name="desc42">Image</string>
    <string name="desc425">Image</string>
    <string name="desc425232">Image</string>
    <string name="desc5">Image</string>
    <string name="tellus">Please tell us who you are</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="name">Name</string>
    <string name="mob">Mobile</string>
    <string name="register">Register</string>
    <string name="lwf">Login with Facebook</string>
    <string name="welcome">Welcome</string>
    <string name="facebook_app_id">162618994428226</string>
    <string name="fb_login_protocol_scheme">fb162618994428226</string>
    <string name="title_activity_maps">Map</string>
    <string name="gps_txt">Please ensure your location services are enabled for GPS</string>
    <string name="if_you_have_already_registered_click_here_to_log_in">If you have already registered,
        click here to log in</string>
    <string name="delete_your_doggy">Reset Doggy Details</string>
    <string name="breed2">Breed</string>
    <string name="sex2">Sex</string>
    <string name="age2">Age</string>
    <string-array name="Spayed2">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="frequency">
        <item>once off</item>
        <item>regular</item>
        <item>unsure</item>
    </string-array>
    <string-array name="host">
        <item>home</item>
        <item>away</item>
        <item>both</item>
    </string-array>
    <string-array name="distance">
        <item>1km</item>
        <item>2km</item>
        <item>5km</item>
        <item>10km</item>
        <item>More than 10km</item>
    </string-array>
    <string-array name="Spayed">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="age">Age</string>
    <string-array name="character">
        <item>Affectionate</item>
        <item>Calm</item>
        <item>Dog friendly</item>
        <item>Easygoing</item>
        <item>Dominant</item>
        <item>High energy</item>
        <item>High intelligence</item>
        <item>High obedience</item>
        <item>Highly sociable</item>
        <item>Kid friendly</item>
        <item>Low energy</item>
        <item>Playful</item>
        <item>Stranger friendly</item>
        <item>Submissive</item>
        <item>Tendency to Bark/howl</item>
        <item>Tolerant</item>
        <item>Vigorous</item>
    </string-array>
    <string name="breed">Breed</string>
    <string name="sex">Sex</string>
    <string name="title_activity_search">Map</string>
    <string name="about_us">About us</string>
    <string name="locate_a_doggymate">Locate a DoggyMate</string>
    <string name="introducing_dogs">Introducing dogs</string>
    <string name="upload_doggy">Chat inbox</string>
    <string name="doggy_search">Doggy search</string>
    <string name="sd">Submit</string>
    <string name="who_is_your_doggy">Upload Doggy</string>
    <string name="nejm">Name</string>
    <string name="ejdy">Age</string>
    <string name="sfd">Breed</string>
    <string name="fdsfsd">Sex</string>
    <string name="fsdfsf">Character</string>
    <string name="dsdsa">About</string>
    <string name="dssasa">Image</string>
    <string name="as">Settings</string>
    <string name="sadadasdad">sadsfsd</string>
    <string name="Settings_setting_txt">Settings</string>
    <string name="Update_settinggs_txt">Update your account</string>
    <string name="name_settings_txt">Name</string>
    <string name="email_settings_txt">Email</string>
    <string name="Mobile_settings_txt">Mobile</string>
    <string name="password_settings_txt">Password</string>
    <string name="dyd">Delete your doggy</string>
    <string name="x">Name</string>
    <string name="y">About</string>
    <string name="Thrree_dots">Dots</string>
    <string name="yavrsi">Yavrsi</string>
    <string name="resset_your_passwor_d">Reset your password</string>
    <string name="introducing_dogis">Introducing Dogs</string>
    <string name="asasasa">Email</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="sss">Distance</string>
    <string name="hostic">Host</string>
    <string name="frequencyc">Frequency</string>
    <string name="find_doggies_near_you">Find doggies near you</string>
    <string name="you_have_unread_message">You have unread messages</string>
</resources>